--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Dhika &amp; Nofa Wedding</title>
+    <title>Farhan's &amp; Yustina Wedding</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,6 +17,9 @@
       href="https://fonts.googleapis.com/css2?family=Sacramento&family=Work+Sans:wght@100;300;400;600;700&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="css/animate.css" />
 
     <!-- simplyCountdown -->
     <link rel="stylesheet" href="countdown/simplyCountdown.theme.default.css" />
@@ -37,19 +40,21 @@
       class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white"
     >
       <main>
-        <h4>Kepada <span>Bapak/Ibu/Saudara/i, </span></h4>
-        <h1>Sandhika &amp; Nofariza</h1>
-        <p>Akan melangsungkan resepsi pernikahan dalam:</p>
-        <div class="simply-countdown"></div>
-        <a href="#home" class="btn btn-lg mt-4" onClick="enableScroll()"
-          >Lihat Undangan</a
-        >
+        <div class="display-tc animate-box" data-animate-effect="fadeIn">
+          <h4>Kepada <span>Bapak/Ibu/Saudara/i, </span></h4>
+          <h1>Farhan &amp; Yustina</h1>
+          <p>Akan melangsungkan resepsi pernikahan dalam:</p>
+          <div class="simply-countdown"></div>
+          <a href="#home" class="btn btn-lg mt-4" onClick="enableScroll()"
+            >Lihat Undangan</a
+          >
+        </div>
       </main>
     </section>
 
     <nav class="navbar navbar-expand-md bg-transparent sticky-top mynavbar">
       <div class="container">
-        <a class="navbar-brand" href="#">Dino</a>
+        <a class="navbar-brand" href="#">Wedding</a>
         <button
           class="navbar-toggler border-0"
           type="button"
@@ -67,7 +72,7 @@
           aria-labelledby="offcanvasNavbarLabel"
         >
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Dino</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Wedding</h5>
             <button
               type="button"
               class="btn-close"
@@ -91,14 +96,15 @@
 
     <section id="home" class="home">
       <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center animate-box">
           <div class="col-md-8 text-center">
+            <h1 style="font-family: 'Arial', sans-serif; color: var(--pink)">
+              بسم الله الرحمن الرحيم
+            </h1>
             <h2>Acara Pernikahan</h2>
-            <h3>
-              Diselenggarakan pada 20 November 2023 di Bandung, Jawa Barat.
-            </h3>
+            <h3>Diselenggarakan Pada 22 September 2024, Bekasi.</h3>
             <p>
-              Oleh karena itu, d engan segala hormat, kami bermaksud untuk
+              Oleh karena itu, dengan segala hormat, kami bermaksud untuk
               mengundang Bapak/Ibu, Saudara/i, untuk hadir pada acara pernikahan
               kami.
             </p>
@@ -154,7 +160,7 @@
     <section
       id="info"
       class="info"
-      style="background-image: url(images/img_bg_3.jpg)"
+      style="background-image: url(img/img_bg_3.jpg)"
     >
       <div class="container">
         <div class="row justify-content-center">
@@ -167,8 +173,8 @@
 
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.1405436373143!2d107.00181447586837!3d-6.245202761153314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e698c29669d69a5%3A0xccbd2c93216d1676!2sRumah%20Makan%20Khas%20Sunda%20Cibiuk!5e0!3m2!1sen!2sid!4v1725713663658!5m2!1sen!2sid"
-              width="100%"
-              height="250"
+              width="80%"
+              height="200"
               style="border: 0"
               allowfullscreen=""
               loading="lazy"
@@ -178,9 +184,11 @@
             <a
               href="https://g.co/kgs/Hj7PhbF"
               target="_blank"
-              class="btn btn-light btn-sm my-3"
-              >Klik untuk membuka peta</a
+              class="btn btn-sm my-3"
             >
+              <i class="bi bi-geo-alt-fill"></i> Lihat Lokasi
+            </a>
+
             <p class="description">
               Diharapkan untuk tidak salah alamat dan tanggal. Manakala tiba di
               tujuan namun tidak ada tanda-tanda sedang dilangsungkan
@@ -201,34 +209,42 @@
                   </div>
                   <div class="col-md-6">
                     <i class="bi bi-calendar3 d-block"></i>
-                    <span>Minggu, 20 November 2023</span>
+                    <span>Minggu, 22 September 2024</span>
                   </div>
                 </div>
               </div>
               <div class="card-footer">
-                Saat acara akad diharapkan untuk kondusif menjaga kekhidmatan
-                dan kekhusyuan seluruh prosesi.
+                Dengan penuh rasa syukur, kami mengundang keluarga dan
+                teman-teman terdekat untuk hadir pada momen istimewa kami. Di
+                bawah naungan cinta dan kebersamaan, kami akan mengikat janji
+                suci dalam sebuah pernikahan yang penuh harapan dan kebahagiaan.
+                Semoga kehadiran Anda dapat menambah kehangatan dan kebersamaan
+                di hari istimewa kami ini.
               </div>
             </div>
           </div>
           <div class="col-md-5 col-10">
             <div class="card text-center text-bg-light">
-              <div class="card-header">Resepsi</div>
+              <div class="card-header">Acara utama</div>
               <div class="card-body">
                 <div class="row justify-content-center">
                   <div class="col-md-6">
                     <i class="bi bi-clock d-block"></i>
-                    <span>11.00 - selesai</span>
+                    <span>11.00 - 14:00</span>
                   </div>
                   <div class="col-md-6">
                     <i class="bi bi-calendar3 d-block"></i>
-                    <span>Minggu, 20 November 2023</span>
+                    <span>Minggu, 22 September 2024</span>
                   </div>
                 </div>
               </div>
               <div class="card-footer">
-                Saat acara akad diharapkan untuk kondusif menjaga kekhidmatan
-                dan kekhusyuan seluruh prosesi.
+                kami mengundang Bapak/Ibu untuk bergabung dalam syukuran penuh
+                kebersamaan dan rasa syukur. Acara ini akan diisi dengan
+                momen-momen keakraban dan kebahagiaan, dilanjutkan dengan santap
+                bersama hidangan yang telah disiapkan khusus untuk tamu
+                undangan. Semoga acara ini dapat menjadi ajang silaturahmi yang
+                penuh makna dan kenangan indah.
               </div>
             </div>
           </div>
@@ -544,7 +560,8 @@
         <div class="row">
           <div class="col text-center">
             <small class="block"
-              >&copy; 2023 DiNo Wedding. All Rights Reserved.</small
+              >&copy; 2024 Farhan &amp; Yustina Wedding. All Rights
+              Reserved.</small
             >
             <small class="block"
               >Design by
