--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           </div>
         </div>
 
-        <div class="row couple">
+        <div class="row couple animate-box">
           <div class="col-lg-6">
             <div class="row">
               <div class="col-8 text-end">
@@ -164,7 +164,7 @@
     >
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-md-8 col-10 text-center">
+          <div class="col-md-8 col-10 text-center animate-box">
             <h2>Informasi Acara</h2>
             <p class="alamat">
               Alamat:Jl. RA Kartini No.11B, RT.002/RW.005, Margahayu, Kec.
@@ -609,6 +609,26 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
 
+    <!-- jQuery -->
+    <script src="js/jquery.min.js"></script>
+    <!-- jQuery Easing -->
+    <script src="js/jquery.easing.1.3.js"></script>
+    <!-- Bootstrap -->
+    <script src="js/bootstrap.min.js"></script>
+    <!-- Waypoints -->
+    <script src="js/jquery.waypoints.min.js"></script>
+    <!-- Carousel -->
+    <script src="js/owl.carousel.min.js"></script>
+    <!-- countTo -->
+    <script src="js/jquery.countTo.js"></script>
+
+    <!-- Stellar -->
+    <script src="js/jquery.stellar.min.js"></script>
+    <!-- Magnific Popup -->
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/magnific-popup-options.js"></script>
+    <!-- Main -->
+    <script src="js/main.js"></script>
     <script>
       simplyCountdown(".simply-countdown", {
         year: 2024, // required
