--- a/index.html
+++ b/index.html
@@ -35,19 +35,21 @@
   </head>
 
   <body>
+    <div class="fh5co-loader"></div>
+
     <section
       id="hero"
       class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white"
     >
       <main>
         <div class="display-tc animate-box" data-animate-effect="fadeIn">
-          <h4>Kepada <span>Bapak/Ibu/Saudara/i, </span></h4>
+          <h4>Kepada Yth. <span>Bapak/Ibu/Saudara/i, </span></h4>
           <h1>Farhan &amp; Yustina</h1>
           <p>Akan melangsungkan resepsi pernikahan dalam:</p>
           <div class="simply-countdown"></div>
-          <a href="#home" class="btn btn-lg mt-4" onClick="enableScroll()"
-            >Lihat Undangan</a
-          >
+          <a href="#home" class="btn btn-lg mt-4" onClick="enableScroll()">
+            <i class="bi bi-envelope-open-fill"></i> Lihat Undangan
+          </a>
         </div>
       </main>
     </section>
@@ -117,7 +119,7 @@
               <div class="col-8 text-end">
                 <h3>Farhan's Taufiqurrahman, S.T</h3>
                 <p>
-                  Putra Pertama dari Bapak Mahfudin <br />
+                  Putra Pertama dari Bapak Mahfudin<br />
                   &amp;<br />
                   Almh. Ibu Suwarsini
                 </p>
@@ -182,7 +184,7 @@
             ></iframe>
 
             <a
-              href="https://g.co/kgs/Hj7PhbF"
+              href="https://maps.app.goo.gl/TWSF8r7G17VFVzqU9"
               target="_blank"
               class="btn btn-sm my-3"
             >
@@ -197,9 +199,9 @@
           </div>
         </div>
 
-        <div class="row justify-content-center mt-4">
+        <div class="row justify-content-center mt-4 animate-box">
           <div class="col-md-5 col-10">
-            <div class="card text-center text-bg-light mb-5">
+            <div class="card animate-box text-center text-bg-light mb-5">
               <div class="card-header">Akad Nikah</div>
               <div class="card-body">
                 <div class="row justify-content-center">
@@ -224,7 +226,7 @@
             </div>
           </div>
           <div class="col-md-5 col-10">
-            <div class="card text-center text-bg-light">
+            <div class="card animate-box text-center text-bg-light">
               <div class="card-header">Acara utama</div>
               <div class="card-body">
                 <div class="row justify-content-center">
@@ -327,11 +329,202 @@
         </div>
       </div>
     </section>
+<div id="fh5co-gallery" class="fh5co-section-gray">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+					<span>Our Memories</span>
+					<h2>Wedding Gallery</h2>
+					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+				</div>
+			</div>
+			<div class="row row-bottom-padded-md">
+				<div class="col-md-12">
+					<ul id="fh5co-gallery-list">
+						
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpg); "> 
+						<a href="images/gallery-1.jpg">
+							<div class="case-studies-summary">
+								<span>14 Photos</span>
+								<h2>Two Glas of Juice</h2>
+							</div>
+						</a>
+					</li>
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
+						<a href="#" class="color-2">
+							<div class="case-studies-summary">
+								<span>30 Photos</span>
+								<h2>Timer starts now!</h2>
+							</div>
+						</a>
+					</li>
 
-    <section id="gallery" class="gallery">
+
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
+						<a href="#" class="color-3">
+							<div class="case-studies-summary">
+								<span>90 Photos</span>
+								<h2>Beautiful sunset</h2>
+							</div>
+						</a>
+					</li>
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-4.jpg); ">
+						<a href="#" class="color-4">
+							<div class="case-studies-summary">
+								<span>12 Photos</span>
+								<h2>Company's Conference Room</h2>
+							</div>
+						</a>
+					</li>
+
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-5.jpg); ">
+							<a href="#" class="color-3">
+								<div class="case-studies-summary">
+									<span>50 Photos</span>
+									<h2>Useful baskets</h2>
+								</div>
+							</a>
+						</li>
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-6.jpg); ">
+							<a href="#" class="color-4">
+								<div class="case-studies-summary">
+									<span>45 Photos</span>
+									<h2>Skater man in the road</h2>
+								</div>
+							</a>
+						</li>
+
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-7.jpg); ">
+							<a href="#" class="color-4">
+								<div class="case-studies-summary">
+									<span>35 Photos</span>
+									<h2>Two Glas of Juice</h2>
+								</div>
+							</a>
+						</li>
+
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-8.jpg); "> 
+							<a href="#" class="color-5">
+								<div class="case-studies-summary">
+									<span>90 Photos</span>
+									<h2>Timer starts now!</h2>
+								</div>
+							</a>
+						</li>
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-9.jpg); ">
+							<a href="#" class="color-6">
+								<div class="case-studies-summary">
+									<span>56 Photos</span>
+									<h2>Beautiful sunset</h2>
+								</div>
+							</a>
+						</li>
+					</ul>		
+				</div>
+			</div>
+		</div>
+	</div>
+
+  <div id="fh5co-gallery" class="fh5co-section-gray"></div>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+					<span>Our Memories</span>
+					<h2>Wedding Gallery</h2>
+					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+				</div>
+			</div>
+			<div class="row row-bottom-padded-md">
+				<div class="col-md-12">
+					<ul id="fh5co-gallery-list">
+						
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(img/gallery-1.jpg); "> 
+						<a href="img/gallery-1.jpg">
+							<div class="case-studies-summary">
+								<!-- <span>14 Photos</span>
+								<h2>Two Glas of Juice</h2> -->
+							</div>
+						</a>
+					</li>
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
+						<a href="#" class="color-2">
+							<div class="case-studies-summary">
+								<span>30 Photos</span>
+								<h2>Timer starts now!</h2>
+							</div>
+						</a>
+					</li>
+
+
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
+						<a href="#" class="color-3">
+							<div class="case-studies-summary">
+								<span>90 Photos</span>
+								<h2>Beautiful sunset</h2>
+							</div>
+						</a>
+					</li>
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-4.jpg); ">
+						<a href="#" class="color-4">
+							<div class="case-studies-summary">
+								<span>12 Photos</span>
+								<h2>Company's Conference Room</h2>
+							</div>
+						</a>
+					</li>
+
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-5.jpg); ">
+							<a href="#" class="color-3">
+								<div class="case-studies-summary">
+									<span>50 Photos</span>
+									<h2>Useful baskets</h2>
+								</div>
+							</a>
+						</li>
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-6.jpg); ">
+							<a href="#" class="color-4">
+								<div class="case-studies-summary">
+									<span>45 Photos</span>
+									<h2>Skater man in the road</h2>
+								</div>
+							</a>
+						</li>
+
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-7.jpg); ">
+							<a href="#" class="color-4">
+								<div class="case-studies-summary">
+									<span>35 Photos</span>
+									<h2>Two Glas of Juice</h2>
+								</div>
+							</a>
+						</li>
+
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-8.jpg); "> 
+							<a href="#" class="color-5">
+								<div class="case-studies-summary">
+									<span>90 Photos</span>
+									<h2>Timer starts now!</h2>
+								</div>
+							</a>
+						</li>
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-9.jpg); ">
+							<a href="#" class="color-6">
+								<div class="case-studies-summary">
+									<span>56 Photos</span>
+									<h2>Beautiful sunset</h2>
+								</div>
+							</a>
+						</li>
+					</ul>		
+				</div>
+			</div>
+		</div>
+	</div>
+
+    <!-- <section id="gallery" class="gallery">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-md-8 col-10 text-center">
+          <div class="col-md-8 col-10 text-center animate-box">
             <span>Memori Kisah Kami</span>
             <h2>Galeri Foto</h2>
             <p>
@@ -429,8 +622,19 @@
             </a>
           </div>
         </div>
+        <div class="text-center mt-4">
+          <div class="ayat-text">
+            <p>
+              "Dan di antara ayat-ayat-Nya ialah Dia menciptakan untukmu
+              istri-istri dari jenismu sendiri, supaya kamu merasa nyaman
+              kepadanya, dan dijadikan-Nya di antaramu mawadah dan rahmah.
+              Sesungguhnya pada yang demikian itu benar-benar terdapat
+              tanda-tanda bagi kaum yang berpikir" <br>{QS. Ar-Rum:21} <br>
+            </p>
+          </div>
+        </div>
       </div>
-    </section>
+    </section> -->
 
     <section id="rsvp" class="rsvp">
       <div class="container">
@@ -486,7 +690,7 @@
         <div class="row justify-content-center mt-5">
           <div class="col-md-6">
             <div id="disqus_thread"></div>
-            <script>
+            <!-- <script>
               /**
                *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
                *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
@@ -504,7 +708,7 @@
                 s.setAttribute("data-timestamp", +new Date());
                 (d.head || d.body).appendChild(s);
               })();
-            </script>
+            </script> -->
             <noscript
               >Please enable JavaScript to view the
               <a href="https://disqus.com/?ref_noscript"
@@ -515,16 +719,18 @@
         </div>
       </div>
     </section>
-
     <section id="gifts" class="gifts">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
-            <span>ungkapan tanda kasih</span>
-            <h2>Kirim Hadiah</h2>
+            <span>Ungkapan Tanda Kasih</span>
+            <h2>Wedding Gift</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
-              iure perferendis provident ab aliquam nemo.
+              Doa restu Bapak/Ibu/Saudara/i merupakan karunia yang sangat
+              berarti bagi kami. Dan jika memberi adalah ungkapan tanda kasih
+              Bapak/Ibu/Saudara/i, Bapak/Ibu/Saudara/i dapat memberi kado secara
+              cashless dengan mengirim amplop digital secara transfer pada akun
+              di bawah ini:
             </p>
           </div>
         </div>
@@ -534,11 +740,11 @@
             <ul class="list-group">
               <li class="list-group-item">
                 <div class="fw-bold">BCA</div>
-                123456789 - SANDHIKA GALIH
+                7391549196 - Farhan's Taufiqurrahman
               </li>
               <li class="list-group-item">
-                <div class="fw-bold">MANDIRI</div>
-                987654321 - SANDHIKA GALIH
+                <div class="fw-bold">BCA</div>
+                7480280398 - Yustina Qurotul 'Aini
               </li>
               <li class="list-group-item">
                 <div class="fw-bold">Saweria</div>
@@ -565,7 +771,7 @@
             >
             <small class="block"
               >Design by
-              <a href="https://instagram.com/sandhikagalih">@sandhikagalih</a
+              <a href="https://instagram.com/rhmnnih">@Rohman Nurhidayat</a
               >.</small
             >
 
@@ -632,8 +838,8 @@
     <script>
       simplyCountdown(".simply-countdown", {
         year: 2024, // required
-        month: 10, // required
-        day: 2, // required
+        month: 9, // required
+        day: 22, // required
         hours: 8, // Default is 0 [0-23] integer
         words: {
           //words displayed into the countdown
