--- a/index.html
+++ b/index.html
@@ -45,11 +45,17 @@
         <div class="display-tc animate-box" data-animate-effect="fadeIn">
           <h4>Kepada Yth. <span>Bapak/Ibu/Saudara/i, </span></h4>
           <h1>Farhan &amp; Yustina</h1>
-          <p>Akan melangsungkan resepsi pernikahan dalam:</p>
+          <p>
+            Tanpa mengurangi rasa hormat, kami bermaksud mengundang Anda untuk
+            menghadiri acara pernikahan kami.
+          </p>
           <div class="simply-countdown"></div>
           <a href="#home" class="btn btn-lg mt-4" onClick="enableScroll()">
-            <i class="bi bi-envelope-open-fill"></i> Lihat Undangan
+            <i class="bi bi-envelope-open-fill"></i> Buka Undangan
           </a>
+          <p class="custom-invite">
+            *Mohon Maaf apabila ada kesalahan penulisan nama/gelar.
+          </p>
         </div>
       </main>
     </section>
@@ -103,16 +109,14 @@
             <h1 style="font-family: 'Arial', sans-serif; color: var(--pink)">
               بسم الله الرحمن الرحيم
             </h1>
-            <h2>Acara Pernikahan</h2>
-            <h3>Diselenggarakan Pada 22 September 2024, Bekasi.</h3>
+            <h2>Assalamu’alaikum Wr. Wb.</h2>
             <p>
-              Oleh karena itu, dengan segala hormat, kami bermaksud untuk
-              mengundang Bapak/Ibu, Saudara/i, untuk hadir pada acara pernikahan
-              kami.
+              Dengan memohon rahmat dan ridho Allah Subhanahu Wa Ta’ala,
+              insyaaAllah kami akan menyelenggarakan acara pernikahan :
             </p>
+            <h3>Diselenggarakan Pada 22 September 2024, Bekasi.</h3>
           </div>
         </div>
-
         <div class="row couple animate-box">
           <div class="col-lg-6">
             <div class="row">
@@ -162,7 +166,7 @@
     <section
       id="info"
       class="info"
-      style="background-image: url(img/img_bg_3.jpg)"
+      style="background-image: url(img/bg-prewed.jpg)"
     >
       <div class="container">
         <div class="row justify-content-center">
@@ -191,11 +195,11 @@
               <i class="bi bi-geo-alt-fill"></i> Lihat Lokasi
             </a>
 
-            <p class="description">
+            <!-- <p class="description">
               Diharapkan untuk tidak salah alamat dan tanggal. Manakala tiba di
               tujuan namun tidak ada tanda-tanda sedang dilangsungkan
               pernikahan, boleh jadi Anda salah jadwal, atau salah tempat.
-            </p>
+            </p> -->
           </div>
         </div>
 
@@ -254,7 +258,7 @@
       </div>
     </section>
 
-    <section id="story" class="story">
+    <!-- <section id="story" class="story">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
@@ -328,313 +332,101 @@
           </div>
         </div>
       </div>
-    </section>
-<div id="fh5co-gallery" class="fh5co-section-gray">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<span>Our Memories</span>
-					<h2>Wedding Gallery</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-				</div>
-			</div>
-			<div class="row row-bottom-padded-md">
-				<div class="col-md-12">
-					<ul id="fh5co-gallery-list">
-						
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpg); "> 
-						<a href="images/gallery-1.jpg">
-							<div class="case-studies-summary">
-								<span>14 Photos</span>
-								<h2>Two Glas of Juice</h2>
-							</div>
-						</a>
-					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
-						<a href="#" class="color-2">
-							<div class="case-studies-summary">
-								<span>30 Photos</span>
-								<h2>Timer starts now!</h2>
-							</div>
-						</a>
-					</li>
+    </section> -->
 
-
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
-						<a href="#" class="color-3">
-							<div class="case-studies-summary">
-								<span>90 Photos</span>
-								<h2>Beautiful sunset</h2>
-							</div>
-						</a>
-					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-4.jpg); ">
-						<a href="#" class="color-4">
-							<div class="case-studies-summary">
-								<span>12 Photos</span>
-								<h2>Company's Conference Room</h2>
-							</div>
-						</a>
-					</li>
-
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-5.jpg); ">
-							<a href="#" class="color-3">
-								<div class="case-studies-summary">
-									<span>50 Photos</span>
-									<h2>Useful baskets</h2>
-								</div>
-							</a>
-						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-6.jpg); ">
-							<a href="#" class="color-4">
-								<div class="case-studies-summary">
-									<span>45 Photos</span>
-									<h2>Skater man in the road</h2>
-								</div>
-							</a>
-						</li>
-
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-7.jpg); ">
-							<a href="#" class="color-4">
-								<div class="case-studies-summary">
-									<span>35 Photos</span>
-									<h2>Two Glas of Juice</h2>
-								</div>
-							</a>
-						</li>
-
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-8.jpg); "> 
-							<a href="#" class="color-5">
-								<div class="case-studies-summary">
-									<span>90 Photos</span>
-									<h2>Timer starts now!</h2>
-								</div>
-							</a>
-						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-9.jpg); ">
-							<a href="#" class="color-6">
-								<div class="case-studies-summary">
-									<span>56 Photos</span>
-									<h2>Beautiful sunset</h2>
-								</div>
-							</a>
-						</li>
-					</ul>		
-				</div>
-			</div>
-		</div>
-	</div>
-
-  <div id="fh5co-gallery" class="fh5co-section-gray"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<span>Our Memories</span>
-					<h2>Wedding Gallery</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-				</div>
-			</div>
-			<div class="row row-bottom-padded-md">
-				<div class="col-md-12">
-					<ul id="fh5co-gallery-list">
-						
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(img/gallery-1.jpg); "> 
-						<a href="img/gallery-1.jpg">
-							<div class="case-studies-summary">
-								<!-- <span>14 Photos</span>
-								<h2>Two Glas of Juice</h2> -->
-							</div>
-						</a>
-					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
-						<a href="#" class="color-2">
-							<div class="case-studies-summary">
-								<span>30 Photos</span>
-								<h2>Timer starts now!</h2>
-							</div>
-						</a>
-					</li>
-
-
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
-						<a href="#" class="color-3">
-							<div class="case-studies-summary">
-								<span>90 Photos</span>
-								<h2>Beautiful sunset</h2>
-							</div>
-						</a>
-					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-4.jpg); ">
-						<a href="#" class="color-4">
-							<div class="case-studies-summary">
-								<span>12 Photos</span>
-								<h2>Company's Conference Room</h2>
-							</div>
-						</a>
-					</li>
-
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-5.jpg); ">
-							<a href="#" class="color-3">
-								<div class="case-studies-summary">
-									<span>50 Photos</span>
-									<h2>Useful baskets</h2>
-								</div>
-							</a>
-						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-6.jpg); ">
-							<a href="#" class="color-4">
-								<div class="case-studies-summary">
-									<span>45 Photos</span>
-									<h2>Skater man in the road</h2>
-								</div>
-							</a>
-						</li>
-
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-7.jpg); ">
-							<a href="#" class="color-4">
-								<div class="case-studies-summary">
-									<span>35 Photos</span>
-									<h2>Two Glas of Juice</h2>
-								</div>
-							</a>
-						</li>
-
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-8.jpg); "> 
-							<a href="#" class="color-5">
-								<div class="case-studies-summary">
-									<span>90 Photos</span>
-									<h2>Timer starts now!</h2>
-								</div>
-							</a>
-						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-9.jpg); ">
-							<a href="#" class="color-6">
-								<div class="case-studies-summary">
-									<span>56 Photos</span>
-									<h2>Beautiful sunset</h2>
-								</div>
-							</a>
-						</li>
-					</ul>		
-				</div>
-			</div>
-		</div>
-	</div>
-
-    <!-- <section id="gallery" class="gallery">
+    <div
+      id="fh5co-gallery"
+      class="fh5co-section-gray"
+      style="background-image: url(img/bg.png)"
+    >
       <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-md-8 col-10 text-center animate-box">
-            <span>Memori Kisah Kami</span>
-            <h2>Galeri Foto</h2>
+        <div class="row">
+          <div
+            class="col-md-8 col-md-offset-2 fh5co-heading text-center animate-box"
+          >
+            <span>Our Memories</span>
+            <h2>Wedding Gallery</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga,
-              itaque?
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts.
             </p>
           </div>
         </div>
+        <div class="row row-bottom-padded-md">
+          <div class="col-md-12">
+            <ul id="fh5co-gallery-list">
+              <li
+                class="one-third animate-box"
+                data-animate-effect="fadeIn"
+                style="background-image: url(img/gallery-1.jpg)"
+              >
+                <a href="img/gallery-1.jpg"> </a>
+              </li>
+              <li
+                class="one-third animate-box"
+                data-animate-effect="fadeIn"
+                style="background-image: url(images/gallery-2.jpg)"
+              >
+                <a href="#" class="color-2"> </a>
+              </li>
 
-        <div
-          class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1 justify-content-center"
-        >
-          <div class="col mt-3">
-            <a
-              href="img/gallery/1.png"
-              data-toggle="lightbox"
-              data-caption="Sandhika & Nofa 1"
-              data-gallery="mygallery"
-            >
-              <img
-                src="img/gallery/thumbnail/1.png"
-                alt="Sandhika & Nofa 1"
-                class="img-fluid w-100 rounded"
-              />
-            </a>
-          </div>
-          <div class="col mt-3">
-            <a
-              href="https://picsum.photos/id/300/1200/768"
-              data-toggle="lightbox"
-              data-caption="Sandhika & Nofa 2"
-              data-gallery="mygallery"
-            >
-              <img
-                src="https://picsum.photos/id/300/300/400"
-                alt="Sandhika & Nofa 2"
-                class="img-fluid w-100 rounded"
-              />
-            </a>
-          </div>
-          <div class="col mt-3">
-            <a
-              href="https://picsum.photos/id/301/1200/768"
-              data-toggle="lightbox"
-              data-caption="Sandhika & Nofa 3"
-              data-gallery="mygallery"
-            >
-              <img
-                src="https://picsum.photos/id/301/300/400"
-                alt="Sandhika & Nofa 3"
-                class="img-fluid w-100 rounded"
-              />
-            </a>
-          </div>
-          <div class="col mt-3">
-            <a
-              href="https://picsum.photos/id/302/1200/768"
-              data-toggle="lightbox"
-              data-caption="Sandhika & Nofa 4"
-              data-gallery="mygallery"
-            >
-              <img
-                src="https://picsum.photos/id/302/300/400"
-                alt="Sandhika & Nofa 4"
-                class="img-fluid w-100 rounded"
-              />
-            </a>
-          </div>
-          <div class="col mt-3">
-            <a
-              href="https://picsum.photos/id/304/1200/768"
-              data-toggle="lightbox"
-              data-caption="Sandhika & Nofa 5"
-              data-gallery="mygallery"
-            >
-              <img
-                src="https://picsum.photos/id/304/300/400"
-                alt="Sandhika & Nofa 5"
-                class="img-fluid w-100 rounded"
-              />
-            </a>
-          </div>
-          <div class="col mt-3">
-            <a
-              href="https://picsum.photos/id/305/1200/768"
-              data-toggle="lightbox"
-              data-caption="Sandhika & Nofa 6"
-              data-gallery="mygallery"
-            >
-              <img
-                src="https://picsum.photos/id/305/300/400"
-                alt="Sandhika & Nofa 6"
-                class="img-fluid w-100 rounded"
-              />
-            </a>
-          </div>
-        </div>
-        <div class="text-center mt-4">
-          <div class="ayat-text">
-            <p>
-              "Dan di antara ayat-ayat-Nya ialah Dia menciptakan untukmu
-              istri-istri dari jenismu sendiri, supaya kamu merasa nyaman
-              kepadanya, dan dijadikan-Nya di antaramu mawadah dan rahmah.
-              Sesungguhnya pada yang demikian itu benar-benar terdapat
-              tanda-tanda bagi kaum yang berpikir" <br>{QS. Ar-Rum:21} <br>
-            </p>
+              <li
+                class="one-third animate-box"
+                data-animate-effect="fadeIn"
+                style="background-image: url(images/gallery-3.jpg)"
+              >
+                <a href="#" class="color-3"> </a>
+              </li>
+              <li
+                class="one-third animate-box"
+                data-animate-effect="fadeIn"
+                style="background-image: url(images/gallery-4.jpg)"
+              >
+                <a href="#" class="color-4"> </a>
+              </li>
+
+              <li
+                class="one-third animate-box"
+                data-animate-effect="fadeIn"
+                style="background-image: url(images/gallery-5.jpg)"
+              >
+                <a href="#" class="color-3"> </a>
+              </li>
+              <li
+                class="one-third animate-box"
+                data-animate-effect="fadeIn"
+                style="background-image: url(images/gallery-6.jpg)"
+              >
+                <a href="#" class="color-4"> </a>
+              </li>
+
+              <li
+                class="one-third animate-box"
+                data-animate-effect="fadeIn"
+                style="background-image: url(images/gallery-7.jpg)"
+              >
+                <a href="#" class="color-4"> </a>
+              </li>
+
+              <li
+                class="one-third animate-box"
+                data-animate-effect="fadeIn"
+                style="background-image: url(images/gallery-8.jpg)"
+              >
+                <a href="#" class="color-5"> </a>
+              </li>
+              <li
+                class="one-third animate-box"
+                data-animate-effect="fadeIn"
+                style="background-image: url(images/gallery-9.jpg)"
+              >
+                <a href="#" class="color-6"> </a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
-    </section> -->
+    </div>
 
     <section id="rsvp" class="rsvp">
       <div class="container">
@@ -690,7 +482,8 @@
         <div class="row justify-content-center mt-5">
           <div class="col-md-6">
             <div id="disqus_thread"></div>
-            <!-- <script>
+
+            <script>
               /**
                *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
                *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
@@ -708,7 +501,7 @@
                 s.setAttribute("data-timestamp", +new Date());
                 (d.head || d.body).appendChild(s);
               })();
-            </script> -->
+            </script>
             <noscript
               >Please enable JavaScript to view the
               <a href="https://disqus.com/?ref_noscript"
@@ -719,6 +512,7 @@
         </div>
       </div>
     </section>
+
     <section id="gifts" class="gifts">
       <div class="container">
         <div class="row justify-content-center">
