--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
       rel="stylesheet"
     />
 
+    <!-- FontAwesome CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+
+    <!-- Sweet Allert -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <!-- Animate.css -->
     <link rel="stylesheet" href="css/animate.css" />
 
@@ -43,7 +56,7 @@
     >
       <main>
         <div class="display-tc animate-box" data-animate-effect="fadeIn">
-          <h4>Kepada Yth. <span>Bapak/Ibu/Saudara/i, </span></h4>
+          <h4>Kepada Yth. <br /><span>Bapak/Ibu/Saudara/i, </span><br /></h4>
           <h1>Farhan &amp; Yustina</h1>
           <p>
             Tanpa mengurangi rasa hormat, kami bermaksud mengundang Anda untuk
@@ -92,8 +105,7 @@
             <div class="navbar-nav ms-auto">
               <a class="nav-link" href="#home">Home</a>
               <a class="nav-link" href="#info">Info</a>
-              <a class="nav-link" href="#story">Story</a>
-              <a class="nav-link" href="#gallery">Gallery</a>
+              <a class="nav-link" href="#fh5co-gallery">Gallery</a>
               <a class="nav-link" href="#rsvp">RSVP</a>
               <a class="nav-link" href="#gifts">Gifts</a>
             </div>
@@ -131,7 +143,7 @@
               <div class="col-4">
                 <img
                   src="img/groom.png"
-                  alt="Sandhika Galih"
+                  alt="Farhan"
                   class="img-responsive rounded-circle"
                 />
               </div>
@@ -145,7 +157,7 @@
               <div class="col-4">
                 <img
                   src="img/bride.png"
-                  alt="Nofariza"
+                  alt="Yustina"
                   class="img-responsive rounded-circle"
                 />
               </div>
@@ -224,8 +236,8 @@
                 teman-teman terdekat untuk hadir pada momen istimewa kami. Di
                 bawah naungan cinta dan kebersamaan, kami akan mengikat janji
                 suci dalam sebuah pernikahan yang penuh harapan dan kebahagiaan.
-                Semoga kehadiran Anda dapat menambah kehangatan dan kebersamaan
-                di hari istimewa kami ini.
+                Semoga kehadiran Anda dapat menambah kebersamaan di hari
+                istimewa kami ini.
               </div>
             </div>
           </div>
@@ -236,7 +248,7 @@
                 <div class="row justify-content-center">
                   <div class="col-md-6">
                     <i class="bi bi-clock d-block"></i>
-                    <span>11.00 - 14:00</span>
+                    <span>12.00 - 14:00</span>
                   </div>
                   <div class="col-md-6">
                     <i class="bi bi-calendar3 d-block"></i>
@@ -341,15 +353,16 @@
     >
       <div class="container">
         <div class="row">
-          <div
-            class="col-md-8 col-md-offset-2 fh5co-heading text-center animate-box"
-          >
-            <span>Our Memories</span>
-            <h2>Wedding Gallery</h2>
+          <div class="col-md-8 col-md-offset-2 mx-auto text-center animate-box">
+            <h2>Gallery</h2>
             <p>
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts.
+              "Dan di antara ayat-ayat-Nya ialah Dia menciptakan untukmu
+              istri-istri dari jenismu sendiri, supaya kamu merasa nyaman
+              kepadanya, dan dijadikan-Nya di antaramu mawadah dan rahmah.
+              Sesungguhnya pada yang demikian itu benar-benar terdapat
+              tanda-tanda bagi kaum yang berpikir"
             </p>
+            <span>{ QS.Ar-Rum-21 }</span>
           </div>
         </div>
         <div class="row row-bottom-padded-md">
@@ -358,69 +371,110 @@
               <li
                 class="one-third animate-box"
                 data-animate-effect="fadeIn"
-                style="background-image: url(img/gallery-1.jpg)"
+                style="background-image: url(img/gallery/gallery-2.jpg)"
               >
-                <a href="img/gallery-1.jpg"> </a>
-              </li>
-              <li
-                class="one-third animate-box"
-                data-animate-effect="fadeIn"
-                style="background-image: url(images/gallery-2.jpg)"
-              >
-                <a href="#" class="color-2"> </a>
-              </li>
-
-              <li
-                class="one-third animate-box"
-                data-animate-effect="fadeIn"
-                style="background-image: url(images/gallery-3.jpg)"
-              >
-                <a href="#" class="color-3"> </a>
-              </li>
-              <li
-                class="one-third animate-box"
-                data-animate-effect="fadeIn"
-                style="background-image: url(images/gallery-4.jpg)"
-              >
-                <a href="#" class="color-4"> </a>
+                <a
+                  href="img/gallery/gallery-2.jpg"
+                  class="color-2"
+                  data-toggle="lightbox"
+                  data-gallery="example-gallery"
+                >
+                </a>
               </li>
 
               <li
                 class="one-third animate-box"
                 data-animate-effect="fadeIn"
-                style="background-image: url(images/gallery-5.jpg)"
+                style="background-image: url(img/gallery/gallery-3.jpg)"
               >
-                <a href="#" class="color-3"> </a>
+                <a
+                  href="img/gallery/gallery-3.jpg"
+                  class="color-3"
+                  data-toggle="lightbox"
+                  data-gallery="example-gallery"
+                >
+                </a>
               </li>
               <li
                 class="one-third animate-box"
                 data-animate-effect="fadeIn"
-                style="background-image: url(images/gallery-6.jpg)"
+                style="background-image: url(img/gallery/gallery-4.jpg)"
               >
-                <a href="#" class="color-4"> </a>
+                <a
+                  href="img/gallery/gallery-4.jpg"
+                  class="color-4"
+                  data-toggle="lightbox"
+                  data-gallery="example-gallery"
+                >
+                </a>
               </li>
 
               <li
                 class="one-third animate-box"
                 data-animate-effect="fadeIn"
-                style="background-image: url(images/gallery-7.jpg)"
+                style="background-image: url(img/gallery/gallery-5.jpg)"
               >
-                <a href="#" class="color-4"> </a>
+                <a
+                  href="img/gallery/gallery-5.jpg"
+                  data-toggle="lightbox"
+                  data-gallery="example-gallery"
+                  class="color-3"
+                >
+                </a>
+              </li>
+              <li
+                class="one-third animate-box"
+                data-animate-effect="fadeIn"
+                style="background-image: url(img/gallery/gallery-6.jpg)"
+              >
+                <a
+                  href="img/gallery/gallery-6.jpg"
+                  class="color-4"
+                  data-toggle="lightbox"
+                  data-gallery="example-gallery"
+                >
+                </a>
               </li>
 
               <li
                 class="one-third animate-box"
                 data-animate-effect="fadeIn"
-                style="background-image: url(images/gallery-8.jpg)"
+                style="background-image: url(img/gallery/gallery-7.jpg)"
               >
-                <a href="#" class="color-5"> </a>
+                <a
+                  href="img/gallery/gallery-7.jpg"
+                  class="color-4"
+                  data-toggle="lightbox"
+                  data-gallery="example-gallery"
+                >
+                </a>
+              </li>
+
+              <li
+                class="one-third animate-box"
+                data-animate-effect="fadeIn"
+                style="background-image: url(img/gallery/gallery-8.jpg)"
+              >
+                <a
+                  href="img/gallery/gallery-8.jpg"
+                  class="color-5"
+                  data-toggle="lightbox"
+                  data-gallery="example-gallery"
+                >
+                </a>
               </li>
               <li
                 class="one-third animate-box"
                 data-animate-effect="fadeIn"
-                style="background-image: url(images/gallery-9.jpg)"
+                style="background-image: url(img/gallery/gallery-9.jpg)"
               >
-                <a href="#" class="color-6"> </a>
+                <a
+                  href="img/gallery/gallery-9.jpg"
+                  class="color-6"
+                  data-toggle="lightbox"
+                  data-gallery="example-gallery"
+                >
+                </a>
               </li>
             </ul>
           </div>
@@ -440,13 +494,23 @@
         <form
           class="row row-cols-md-auto g-3 align-items-center justify-content-center"
           method="POST"
-          action="https://script.google.com/macros/s/AKfycbyddFbEJRqwEeA6OmZAuNf0jw_B30ZUOS5qSDwlAKV_nurcW7H6osJx2ZWnIeTmPm_35g/exec"
+          action="https://script.google.com/macros/s/AKfycbxDrjE4-QmZtmbG-f7QzQoyrPgru3seo5zjjZk95tmztUAnOvqQpzvN9q3j53eAWLgq/exec"
           id="my-form"
         >
           <div class="col-12">
             <div class="mb-3">
               <label for="nama" class="form-label">Nama</label>
-              <input type="text" class="form-control" id="nama" name="nama" />
+              <input
+                type="text"
+                class="form-control"
+                id="nama"
+                name="nama"
+                style="
+                  border: 1px solid #f14e95;
+                  padding: 10px;
+                  border-radius: 5px;
+                "
+              />
             </div>
           </div>
           <div class="col-12">
@@ -461,6 +525,11 @@
                 max="5"
                 length="1"
                 value="1"
+                style="
+                  border: 1px solid #f14e95;
+                  padding: 10px;
+                  border-radius: 5px;
+                "
               />
             </div>
           </div>
@@ -474,7 +543,7 @@
               </select>
             </div>
           </div>
-          <div class="col-12" style="margin-top: 35px">
+          <div class="col-12 justify-content-center" style="margin-top: 35px">
             <button class="btn btn-primary">Kirim</button>
           </div>
         </form>
@@ -482,22 +551,21 @@
         <div class="row justify-content-center mt-5">
           <div class="col-md-6">
             <div id="disqus_thread"></div>
-
             <script>
               /**
                *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
                *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-
-              var disqus_config = function () {
-                this.page.url = "https://sandhikagalih.me"; // Replace PAGE_URL with your page's canonical URL variable
-                this.page.identifier = "https://sandhikagalih.me"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-              };
-
+              /*
+                var disqus_config = function () {
+                this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+                this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                };
+                */
               (function () {
                 // DON'T EDIT BELOW THIS LINE
                 var d = document,
                   s = d.createElement("script");
-                s.src = "https://dino-wedding-1.disqus.com/embed.js";
+                s.src = "https://farhan-yustina-wedding.disqus.com/embed.js";
                 s.setAttribute("data-timestamp", +new Date());
                 (d.head || d.body).appendChild(s);
               })();
@@ -529,25 +597,47 @@
           </div>
         </div>
 
-        <div class="row justify-content-center text-center">
+        <div class="row justify-content-center">
           <div class="col-md-6">
             <ul class="list-group">
-              <li class="list-group-item">
-                <div class="fw-bold">BCA</div>
-                7391549196 - Farhan's Taufiqurrahman
-              </li>
-              <li class="list-group-item">
-                <div class="fw-bold">BCA</div>
-                7480280398 - Yustina Qurotul 'Aini
-              </li>
-              <li class="list-group-item">
-                <div class="fw-bold">Saweria</div>
+              <!-- List Group Item 1 -->
+              <li class="list-group-item d-flex flex-column align-items-center">
                 <img
-                  src="img/saweria.png"
-                  alt="Saweria QR"
-                  class="img-thumbnail"
+                  src="img/bca-logo.png"
+                  alt="BCA Logo"
+                  class="bank-logo mb-3"
+                />
+                <div class="fw-bold">A\n Farhan's Taufiqurrahman</div>
+                <div id="rekening1" class="mb-2">7391549196</div>
+                <img
+                  src="img/bca-farhan.png"
+                  alt="BCA QR Code"
+                  class="img-thumbnail mb-3"
                   width="150"
                 />
+                <button class="btn btn-copy" data-rekening="rekening1">
+                  <i class="fas fa-copy"></i> Copy Rekening
+                </button>
+              </li>
+
+              <!-- List Group Item 2 -->
+              <li class="list-group-item d-flex flex-column align-items-center">
+                <img
+                  src="img/bca-logo.png"
+                  alt="BCA Logo"
+                  class="bank-logo mb-3"
+                />
+                <div class="fw-bold">A\n Yustina Qurotul 'Aini</div>
+                <div id="rekening2" class="mb-2">7480280398</div>
+                <img
+                  src="img/bca-yus.png"
+                  alt="BCA QR Code"
+                  class="img-thumbnail mb-3"
+                  width="150"
+                />
+                <button class="btn btn-copy" data-rekening="rekening2">
+                  <i class="fas fa-copy"></i> Copy Rekening
+                </button>
               </li>
             </ul>
           </div>
@@ -571,13 +661,12 @@
 
             <ul class="mt-3">
               <li>
-                <a href="#"><i class="bi bi-instagram"></i></a>
+                <a href="https://instagram.com/rhmnnih"
+                  ><i class="bi bi-instagram"></i
+                ></a>
               </li>
               <li>
                 <a href="#"><i class="bi bi-youtube"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="bi bi-twitter"></i></a>
               </li>
               <li>
                 <a href="#"><i class="bi bi-facebook"></i></a>
@@ -629,6 +718,39 @@
     <script src="js/magnific-popup-options.js"></script>
     <!-- Main -->
     <script src="js/main.js"></script>
+
+    <script>
+      document.querySelectorAll(".btn-copy").forEach((button) => {
+        button.addEventListener("click", function () {
+          const rekeningID = this.getAttribute("data-rekening");
+          const rekeningText = document.getElementById(rekeningID).textContent;
+
+          navigator.clipboard
+            .writeText(rekeningText)
+            .then(() => {
+              Swal.fire({
+                title: "Berhasil Disalin!",
+                text: "Nomor rekening berhasil disalin: " + rekeningText,
+                icon: "success",
+                confirmButtonText: "OK",
+                confirmButtonColor: "#f14e95",
+              });
+            })
+            .catch((error) => {
+              Swal.fire({
+                title: "Gagal!",
+                text: "Terjadi kesalahan saat menyalin nomor rekening.",
+                icon: "error",
+                confirmButtonText: "OK",
+                confirmButtonColor: "#f14e95",
+              });
+            });
+        });
+      });
+    </script>
+
+    <!-- Countdown Start -->
+
     <script>
       simplyCountdown(".simply-countdown", {
         year: 2024, // required
@@ -658,6 +780,9 @@
       });
     </script>
 
+    <!-- Countdown END -->
+
+    <!-- Audio & Scrolling START -->
     <script>
       const rootElement = document.querySelector(":root");
       const audioIconWrapper = document.querySelector(".audio-icon-wrapper");
@@ -709,6 +834,9 @@
       // }
       disableScroll();
     </script>
+
+    <!-- Audio & Scrolling END -->
+
     <script>
       window.addEventListener("load", function () {
         const form = document.getElementById("my-form");
@@ -720,11 +848,20 @@
             method: "POST",
             body: data,
           }).then(() => {
-            alert("Konfirmasi kehadiran berhasil terkirim!");
+            Swal.fire({
+              title: "Terima Kasih!",
+              text: "Konfirmasi kehadiran berhasil terkirim.",
+              icon: "success",
+              confirmButtonText: "OK",
+              confirmButtonColor: "#f14e95", // Sesuaikan dengan nuansa tema pink
+            });
           });
         });
       });
     </script>
+
+    <!-- RSVP Form Excel Start -->
+
     <script>
       const urlParams = new URLSearchParams(window.location.search);
       const nama = urlParams.get("n") || "";
@@ -734,5 +871,7 @@
 
       document.querySelector("#nama").value = nama;
     </script>
+
+    <!-- RSVP Form Excel END -->
   </body>
 </html>
